add semantic release

--- a/package.json
+++ b/package.json
@@ -1,54 +1,4 @@
 {
-  "version": "0.0.0-development",
-  "license": "MIT",
-  "main": "dist/index.js",
-  "typings": "dist/index.d.ts",
-  "files": [
-    "dist",
-    "src"
-  ],
-  "engines": {
-    "node": ">=10"
-  },
-  "scripts": {
-    "start": "tsdx watch",
-    "build": "tsdx build",
-    "test": "tsdx test --passWithNoTests",
-    "lint": "tsdx lint",
-    "prepare": "tsdx build",
-    "size": "size-limit",
-    "analyze": "size-limit --why",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook",
-    "semantic-release": "semantic-release --branches main"
-  },
-  "peerDependencies": {
-    "react": ">=16"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "tsdx lint"
-    }
-  },
-  "prettier": {
-    "printWidth": 80,
-    "semi": true,
-    "singleQuote": true,
-    "trailingComma": "es5"
-  },
-  "name": "youtube-demo-second",
-  "author": "JawadZein",
-  "module": "dist/youtube-demo-second.esm.js",
-  "size-limit": [
-    {
-      "path": "dist/youtube-demo-second.cjs.production.min.js",
-      "limit": "10 KB"
-    },
-    {
-      "path": "dist/youtube-demo-second.esm.js",
-      "limit": "10 KB"
-    }
-  ],
   "devDependencies": {
     "@babel/core": "^7.21.4",
     "@size-limit/preset-small-lib": "^8.2.4",
@@ -60,18 +10,23 @@
     "@types/react": "^18.0.35",
     "@types/react-dom": "^18.0.11",
     "babel-loader": "^9.1.2",
+    "cz-conventional-changelog": "^3.3.0",
     "husky": "^8.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-is": "^18.2.0",
+    "semantic-release": "^21.0.1",
     "size-limit": "^8.2.4",
     "tsdx": "^0.14.1",
     "tslib": "^2.5.0",
-    "typescript": "^5.0.4",
-    "semantic-release": "^21.0.1"
+    "typescript": "^5.0.4"
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/JawadZein/youtube-second.git"
+  "peerDependencies": {
+    "react": ">=16"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
