--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -30,7 +30,7 @@ jobs:
     - run: npm run build --if-present
     
   publish:
-    runs-on: ubunut-latest
+    runs-on: ubuntu-latest
     if: ${{ github.ref == 'refs/heads/main'}}
     needs: [quality]
     steps:
