--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -40,5 +40,5 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - run: npm install
-    - run: npm sementic-release
+    - run: npm semantic-release
 
