--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -41,4 +41,8 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - run: npm install
     - run: npm semantic-release
+      env:
+       NPM_TOKEN: ${{ secrets.NPM_TOKEN}}
+       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      
 
