--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -40,7 +40,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - run: npm install
-    - run: npm semantic-release
+    - run: npm run semantic-release
       env:
        NPM_TOKEN: ${{ secrets.NPM_TOKEN}}
        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
