--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,5 +1,5 @@
 # This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
+# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs.
 
 name: Node.js CI
 
@@ -42,7 +42,7 @@ jobs:
     - run: npm install
     - run: npm run semantic-release
       env:
-       NPM_TOKEN: ${{ secrets.NPM_TOKEN}}
+       NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       
 
