--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -7,7 +7,12 @@ on:
   push:
     branches: [ "main" ]
   pull_request:
-    branches: [ "main" ]
+    branches: '*'
+    
+permissions:
+      contents: read
+      pages: write
+      id-token: write
 
 jobs:
   quality:
