--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,8 +19,11 @@ jobs:
     runs-on: ${{ matrix.os }}
     
     permissions:
-            pages: write
-            id-token: write
+    
+            contents: write # to be able to publish a GitHub release
+            issues: write # to be able to comment on released issues
+            pull-requests: write # to be able to comment on released pull requests
+            id-token: write # to enable use of OIDC for npm provenance
 
     strategy:
       matrix:
