--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -55,5 +55,6 @@ jobs:
       env:
        NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+       REPO_URL: "https://${{ secrets.GITHUB_TOKEN }}@github.com/JawadZein/youtube-second.git"
       
 
