--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "@babel/core": "^7.21.4",
     "@size-limit/preset-small-lib": "^8.2.4",
     "@storybook/addon-essentials": "^7.0.5",
-    "@storybook/addon-info": "^5.3.21",
+    "@storybook/addon-info": "^4.1.18",
     "@storybook/addon-links": "^7.0.5",
     "@storybook/addons": "^7.0.5",
     "@storybook/react": "^7.0.5",
@@ -68,7 +68,8 @@
     "react-is": "^18.2.0",
     "semantic-release": "^21.0.1",
     "size-limit": "^8.2.4",
-    "tsdx": "^0.14.1",
+    "standard-version": "^9.5.0",
+    "tsdx": "^0.13.3",
     "tslib": "^2.5.0",
     "typescript": "^5.0.4"
   },
