--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,7 +16,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: README
-          path: ./first-branch/README.md
+          path: ./main/README.md
 
       - name: Download README file
         uses: actions/download-artifact@v2
@@ -27,7 +27,7 @@ jobs:
       - name: Commit changes
         run: |
           git config user.name "${{ github.actor }}"
-          git config user.email "${{ github.actor }}@users.noreply.github.com"
+          git config user.email "${{ github.actor }}@jawadzein.noreply.github.com"
           git add .
           git commit -m "Update README"
           git push
